tweak JVM options